--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,7 @@ jobs:
             with:
               node-version: '16'
               cache: 'npm'
+              cache-dependency-path: ./codebase/rdicidr-0.1.0/package-lock.json
 
 
           - name: Install dependencies
